--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<artifactId>dotaarea</artifactId>
 	<version>0.0.1</version>
 	<packaging>war</packaging>
+	<name>dotaarea</name>
 	<profiles>
 		<profile>
 			<id>dota-area</id>
@@ -16,16 +17,29 @@
 			</activation>
 		</profile>
 	</profiles>
-	<!--
-		<repositories> <repository> <id>google-maven-repo</id> <name>Google
-		Maven Repository</name>
-		<url>http://google-maven-repository.googlecode.com/svn/repository/</url>
-		</repository> </repositories> <pluginRepositories> <pluginRepository>
-		<id>maven-gae-plugin-repo</id> <name>Maven Google App Engine
-		Repository</name>
-		<url>http://maven-gae-plugin.googlecode.com/svn/repository/</url>
-		</pluginRepository> </pluginRepositories>
-	-->
+
+	<repositories>
+		<!--
+			<repository> <id>google-maven-repo</id> <name>Google Maven
+			Repository</name>
+			<url>http://google-maven-repository.googlecode.com/svn/repository/</url>
+			</repository>
+		-->
+	</repositories>
+	<pluginRepositories>
+		<!--
+			<pluginRepository> <id>maven-gae-plugin-repo</id> <name>Maven Google
+			App Engine Repository</name>
+			<url>http://maven-gae-plugin.googlecode.com/svn/repository/</url>
+			</pluginRepository>
+		-->
+		<pluginRepository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Maven 2 Repository</name>
+			<url>http://download.java.net/maven/2</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<properties>
 		<gae.home>E:/tookit/ide/appengine1.3.4</gae.home>
 		<gae.version>1.3.4</gae.version>
@@ -107,6 +121,7 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -124,6 +139,42 @@
 					<configuration> <username>bsspirit@163.com</username>
 					<password>85831923</password> </configuration>
 				-->
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxb2-maven-plugin</artifactId>
+				<version>1.3</version>
+				<configuration>
+					<schemaDirectory>src/main/resources/schema</schemaDirectory>
+					<outputDirectory>src/main/generated</outputDirectory>
+					<packageName>org.conan.game.dota.generated</packageName>
+				</configuration>
+			</plugin>
+
+			<!--
+				<configuration> <schemaDirectory>src/main/schema</schemaDirectory>
+				<generateDirectory>src/main/generated</generateDirectory>
+				<generatePackage>org.conan.game.dota.generated</generatePackage>
+				<removeOldOutput>false</removeOldOutput> </configuration>
+			-->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/main/generated</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<finalName>dotaarea</finalName>
@@ -153,6 +204,19 @@
 			<artifactId>logback-classic</artifactId>
 			<version>0.9.18</version>
 		</dependency>
+
+		<!-- jaxb -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2</version>
+		</dependency>
+
 		<!-- commons -->
 		<dependency>
 			<groupId>commons-lang</groupId>
