--- a/pom.xml
+++ b/pom.xml
@@ -17,28 +17,28 @@
 			</activation>
 		</profile>
 	</profiles>
-
+<!-- 
 	<repositories>
-		<!--
-			<repository> <id>google-maven-repo</id> <name>Google Maven
+		<repository>
+			<id>google-maven-repo</id>
+			<name>Google Maven
 			Repository</name>
 			<url>http://google-maven-repository.googlecode.com/svn/repository/</url>
-			</repository>
-		-->
+		</repository>
 	</repositories>
 	<pluginRepositories>
-		<!--
-			<pluginRepository> <id>maven-gae-plugin-repo</id> <name>Maven Google
-			App Engine Repository</name>
+		<pluginRepository>
+			<id>maven-gae-plugin-repo</id>
+			<name>Maven Google App Engine Repository</name>
 			<url>http://maven-gae-plugin.googlecode.com/svn/repository/</url>
-			</pluginRepository>
-		-->
+		</pluginRepository>
 		<pluginRepository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net Maven 2 Repository</name>
 			<url>http://download.java.net/maven/2</url>
 		</pluginRepository>
 	</pluginRepositories>
+-->
 
 	<properties>
 		<gae.home>E:/tookit/ide/appengine1.3.4</gae.home>
